# http-to-mqtt

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  tests.yml
app/main/: routes.py
tests/: test_app.py
